<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.UserSetupActivity">

    <ImageButton
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/create_user"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/arrowBack"
        app:layout_constraintStart_toEndOf="@+id/arrowBack"
        app:layout_constraintTop_toTopOf="@+id/arrowBack" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/let_s_get_started"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"

        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/displayNameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/person_icon"
            android:drawablePadding="12dp"
            android:hint="@string/display_name"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dobEtLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:inputType="datetime"
        app:endIconDrawable="@drawable/arrow_bottom"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dobEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableStart="@drawable/date_icon"
            android:drawablePadding="12dp"
            android:focusable="false"
            android:hint="@string/date_of_birth"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Weight Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightEtLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/heightEtLay"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/dobEtLay"
        app:layout_constraintTop_toBottomOf="@+id/dobEtLay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/weight_icon"
            android:drawablePadding="12dp"
            android:hint="Weight"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Height Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightEtLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/dobEtLay"
        app:layout_constraintStart_toEndOf="@id/weightEtLay"
        app:layout_constraintTop_toBottomOf="@+id/dobEtLay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/height_icon"
            android:drawablePadding="12dp"
            android:hint="Height"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/toggleGender"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/blue_out_line"
        android:checkedButton="@+id/male"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightEtLay">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="Female"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="Male"
            android:textColor="@color/white" />

    </RadioGroup>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/toggleGender"
        app:layout_constraintStart_toStartOf="@+id/toggleGender"
        app:layout_constraintTop_toBottomOf="@+id/toggleGender" />

    <TextView
        android:id="@+id/txtSetGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/set_your_goals"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/weightEtLay"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <!-- water Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/waterEtLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/calEtLay"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/txtSetGoals"
        app:layout_constraintTop_toBottomOf="@+id/txtSetGoals">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/waterEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/water_icon"
            android:drawablePadding="12dp"
            android:hint="Water"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- cal Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calEtLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/dobEtLay"
        app:layout_constraintStart_toEndOf="@id/waterEtLay"
        app:layout_constraintTop_toBottomOf="@+id/txtSetGoals">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/cal_icon"
            android:drawablePadding="12dp"
            android:hint="Calories"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- target weight Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tWeightEtLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/calEtLay"
        app:layout_constraintStart_toStartOf="@id/waterEtLay"
        app:layout_constraintTop_toBottomOf="@+id/waterEtLay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tWeightEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/weight_icon"
            android:drawablePadding="12dp"
            android:hint="Target Weight"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/confirm_anim" />

</androidx.constraintlayout.widget.ConstraintLayout>

